# mid-term-computer-vision

./: CMakeLists.txt  README.md
src/: estimatefootprint.cpp  midterm-m10815822.cpp  midterm-m10815822.hpp  twoviewsgeometry.cpp
